--- a/style.css
+++ b/style.css
@@ -147,11 +147,18 @@ code {
     padding: 0px;
 }
 
-.results video {
+.results .video-container video {
     width: 25rem;
     max-width: 23vw;
     min-width: 10em;
-    aspect-ratio: 1 / 1;
+    margin: 0px;
+    display: block;
+}
+
+.results .video-container img {
+    width: 50rem;
+    max-width: 90vw;
+    max-height: 10vw;
     margin: 0px;
     display: block;
 }
